--- a/src/Pages/Committee/Committee.css
+++ b/src/Pages/Committee/Committee.css
@@ -4,12 +4,12 @@
   /* Border Radius */
 	border-radius: 10px;
 	z-index: 1;
+	
 }
 
 .animated-border-box-glow{
-  overflow: hidden;
   /* Glow Blur */
-  filter: blur(5px);
+  filter: blur(3px);
 }
 
 .animated-border-box:before, .animated-border-box-glow:before {
@@ -19,7 +19,7 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%) rotate(0deg);
-  position: absolute;
+	position: absolute;
 	width: 99999px;
 	height: 99999px;
 	background-repeat: no-repeat;
@@ -28,6 +28,28 @@
   /* change speed here */
 	animation: rotate 10s linear infinite;
 }
+
+.president-card,
+.gs-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+  /* height: 350px; 
+  width: 100%; */
+  margin: 10px;
+}
+
+/* .president-card figure img,
+.gs-card figure img {
+  max-height: 200px;
+  object-fit: cover;
+} */
 
 .president-card:before {
 	background-image: conic-gradient(#FFD700, #FFFFFF, #FFD700 15%);
@@ -42,15 +64,20 @@
 	position: absolute;
 	z-index: -1;
   /* border width */
-	left: 3%;
-	top: 3%;
+	left: 2px;
+	top: 2px;
   /* double the px from the border width left */
-	width: calc(100% - 6%);
-	height: calc(100% - 6%);
+	width: calc(99% - 6%);
+	height: calc(99% - 6%);
   /*bg color*/
 	background: whitesmoke;
   /*box border radius*/
 	border-radius: 7px;
+	display: flex;
+  align-self: center;
+  justify-self: center;
+  height: 95%;
+  margin: 10px;
 }
 
 @keyframes rotate {
